# src/main/java/edu/gatech/chai/pacer/api/SearchApi.java
@@ -1,18 +1,3 @@
-/*******************************************************************************
- * Copyright (c) 2019 Georgia Tech Research Institute
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- *******************************************************************************/
 /**
  * NOTE: This class is auto generated by the swagger code generator program (3.0.4).
  * https://github.com/swagger-api/swagger-codegen
@@ -37,17 +22,17 @@ import javax.validation.Valid;
 import javax.validation.constraints.*;
 import java.util.List;
 import java.util.Map;
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2019-03-01T16:08:08.392540-05:00[America/New_York]")
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2019-03-02T03:56:23.582587-05:00[America/New_York]")
 @Api(value = "search", description = "the search API")
 public interface SearchApi {
 
-    @ApiOperation(value = "searches indexes", nickname = "searchDecedent", notes = "By passing in the appropriate options, you can search for decedent indexes ", response = Organizations.class, tags={  })
+    @ApiOperation(value = "searches indexes", nickname = "searchOrganization", notes = "By passing in the appropriate options, you can search for PACER indexes of the organization ", response = Organizations.class, tags={  })
     @ApiResponses(value = { 
         @ApiResponse(code = 200, message = "search results matching criteria", response = Organizations.class),
         @ApiResponse(code = 400, message = "bad input parameter") })
     @RequestMapping(value = "/search",
         produces = { "application/json" }, 
         method = RequestMethod.GET)
-    ResponseEntity<Organizations> searchDecedent(@ApiParam(value = "Name of Organization") @Valid @RequestParam(value = "organization-name", required = false) String organizationName,@ApiParam(value = "Organization ID Set (Type|Id)") @Valid @RequestParam(value = "organization-id", required = false) String organizationId);
+    ResponseEntity<Organizations> searchOrganization(@ApiParam(value = "Name of Organization") @Valid @RequestParam(value = "organization-name", required = false) String organizationName,@ApiParam(value = "Organization ID Set (Type|Id)") @Valid @RequestParam(value = "organization-id", required = false) String organizationId);
 
 }
