# swagger.json
@@ -28,8 +28,8 @@
       "get" : {
         "tags" : [ "developers" ],
         "summary" : "searches indexes",
-        "operationId" : "searchDecedent",
-        "description" : "By passing in the appropriate options, you can search for decedent indexes\n",
+        "operationId" : "searchOrganization",
+        "description" : "By passing in the appropriate options, you can search for PACER indexes of the organization\n",
         "parameters" : [ {
           "in" : "query",
           "name" : "organization-name",
